Created basic test data and neural net code

--- a/jupyter/Ming.ipynb
+++ b/jupyter/Ming.ipynb
@@ -2,20 +2,237 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "import os\n",
+    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3' "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creating fake data \n",
+    "\n",
+    "data = [['2000-01-01', 1, 0], ['2000-01-02', 0.2 ,1], ['2000-01-03', 0.3,1], ['2000-01-04', 0.4,0]] \n",
+    "df = pd.DataFrame(data, columns = ['Date', 'Price', 'Decision']) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs_df = df['Price'].values\n",
+    "outputs_df = df['Decision'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.utils import to_categorical\n",
+    "\n",
+    "# Step 2: One-hot encoding\n",
+    "output = to_categorical(outputs_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creating the NN. Import the stuff\n",
+    "\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create the model\n",
+    "model = Sequential()\n",
+    "\n",
+    "#Setting general NN info here\n",
+    "#Since the first col is date and last col is decision, the ones in the middle are the true inputs\n",
+    "number_of_inputs = len(df.columns)-2\n",
+    "#We should have at least 1 extra layer. Just a design choice.\n",
+    "number_of_layers = number_of_inputs + 1\n",
+    "#Currently, the plan is to have an N by N grid system based on the number of inputs. \n",
+    "number_of_neurons_per_layer = number_of_layers + 1\n",
+    "\n",
+    "\n",
+    "#Adding the first input layer\n",
+    "model.add(Dense(units=number_of_neurons_per_layer, activation='relu', input_dim=number_of_inputs))\n",
+    "\n",
+    "for i in range(number_of_layers):\n",
+    "    model.add(Dense(units=number_of_neurons_per_layer, activation='relu'))\n",
+    "\n",
+    "#Adding the output layer\n",
+    "model.add(Dense(units=2, activation='softmax')) \n",
+    "\n",
+    "#Compiling\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy']) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x119664c50>"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Training the neurons\n",
+    "\n",
+    "model.fit(\n",
+    "    inputs_df,\n",
+    "    output,\n",
+    "    epochs=1000,\n",
+    "    shuffle=False,\n",
+    "    verbose=0\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello world\n"
+      "Model: \"sequential_6\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_10 (Dense)             (None, 3)                 6         \n",
+      "_________________________________________________________________\n",
+      "dense_11 (Dense)             (None, 3)                 12        \n",
+      "_________________________________________________________________\n",
+      "dense_12 (Dense)             (None, 3)                 12        \n",
+      "_________________________________________________________________\n",
+      "dense_13 (Dense)             (None, 2)                 8         \n",
+      "=================================================================\n",
+      "Total params: 38\n",
+      "Trainable params: 38\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello world\")"
+    "model.summary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pymongo\n",
+    "\n",
+    "#I should probably put the information below into a hidden cofig file but it's all free anyway and this is a trial account. :shrug:\n",
+    "client = pymongo.MongoClient(\"mongodb+srv://ming:ming123@ferengai-tiysn.mongodb.net/test?retryWrites=true&w=majority\")\n",
+    "db = client.popcorn\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertOneResult at 0xb302d2588>"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.my_bag.insert_one(\n",
+    "    {\n",
+    "        'name':'Ming',\n",
+    "        'age':'30',\n",
+    "        'amount': \"TONS\"\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "found = db.test_collection.find({\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array = list(found)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'_id': ObjectId('5d8bf1ba478a2a04f065e3c8'), 'name': 'Ming', 'age': '30'},\n",
+       " {'_id': ObjectId('5d8bf5f6478a2a04f065e3ca'), 'name': 'Ming', 'age': '30'}]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -41,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
