--- a/jupyter/Ming.ipynb
+++ b/jupyter/Ming.ipynb
@@ -27,6 +27,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Decision</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2000-01-01</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2000-01-02</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2000-01-03</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2000-01-04</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date  Price  Decision\n",
+       "0  2000-01-01    1.0         0\n",
+       "1  2000-01-02    0.2         1\n",
+       "2  2000-01-03    0.3         1\n",
+       "3  2000-01-04    0.4         0"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
    "outputs": [],
@@ -159,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,72 +244,54 @@
     "\n",
     "#I should probably put the information below into a hidden cofig file but it's all free anyway and this is a trial account. :shrug:\n",
     "client = pymongo.MongoClient(\"mongodb+srv://ming:ming123@ferengai-tiysn.mongodb.net/test?retryWrites=true&w=majority\")\n",
-    "db = client.popcorn\n"
+    "db = client.test\n",
+    "col = db.test_collection\n",
+    "\n",
+    "col.drop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0xb302d2588>"
+       "<pymongo.results.InsertManyResult at 0xb302c8c48>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "db.my_bag.insert_one(\n",
-    "    {\n",
-    "        'name':'Ming',\n",
-    "        'age':'30',\n",
-    "        'amount': \"TONS\"\n",
-    "    }\n",
-    ")"
+    "col.insert_many(df.to_dict('records'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "found = db.test_collection.find({\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "array = list(found)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'_id': ObjectId('5d8bf1ba478a2a04f065e3c8'), 'name': 'Ming', 'age': '30'},\n",
-       " {'_id': ObjectId('5d8bf5f6478a2a04f065e3ca'), 'name': 'Ming', 'age': '30'}]"
+       "[{'Date': '2000-01-01', 'Price': 1.0, 'Decision': 0},\n",
+       " {'Date': '2000-01-02', 'Price': 0.2, 'Decision': 1},\n",
+       " {'Date': '2000-01-03', 'Price': 0.3, 'Decision': 1},\n",
+       " {'Date': '2000-01-04', 'Price': 0.4, 'Decision': 0}]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df.to_dict('records')"
+   ]
   },
   {
    "cell_type": "code",
