more progress on NN

--- a/jupyter/Ming.ipynb
+++ b/jupyter/Ming.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Isolating the columns we want\n",
+    "inputs_df = df['Price'].values\n",
+    "outputs_df = df['Decision'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +62,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Date</th>\n",
        "      <th>Price</th>\n",
        "      <th>Decision</th>\n",
        "    </tr>\n",
@@ -59,25 +69,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2000-01-01</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2000-01-02</td>\n",
        "      <td>0.2</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2000-01-03</td>\n",
        "      <td>0.3</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2000-01-04</td>\n",
        "      <td>0.4</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -86,54 +92,47 @@
        "</div>"
       ],
       "text/plain": [
-       "         Date  Price  Decision\n",
-       "0  2000-01-01    1.0         0\n",
-       "1  2000-01-02    0.2         1\n",
-       "2  2000-01-03    0.3         1\n",
-       "3  2000-01-04    0.4         0"
+       "   Price  Decision\n",
+       "0    1.0         0\n",
+       "1    0.2         1\n",
+       "2    0.3         1\n",
+       "3    0.4         0"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inputs_df = df['Price'].values\n",
-    "outputs_df = df['Decision'].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras.utils import to_categorical\n",
+    "# Here, we'll try to create code that will automatically isolate the columns we want\n",
     "\n",
-    "# Step 2: One-hot encoding\n",
-    "output = to_categorical(outputs_df)"
+    "# df.columns will return an array of column names which allows us to splice the desired columns without knowing their names since the array index is effectively also the column index.\n",
+    "\n",
+    "# Since the first column is the date and the last column is the expected output, the range will always be column 1 to the \"number of the last column-1\".\n",
+    "number_of_columns = len(df.columns)\n",
+    "\n",
+    "df.loc[:,df.columns[1:3]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Price', 'Decision'], dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Creating the NN. Import the stuff\n",
-    "\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense "
+    "df.columns[1:3]"
    ]
   },
   {
@@ -145,9 +144,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.utils import to_categorical\n",
+    "\n",
+    "# Step 2: One-hot encoding\n",
+    "# Even though the last columns is already 1 or 0, to_categorical needs to somehow convert this into \n",
+    "# an array that looks like [x1,x2] and literally separate them into different states\n",
+    "# Try printing out output and outputs_df to see the difference.\n",
+    "output = to_categorical(outputs_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#Creating the NN. Import the stuff\n",
+    "\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /Users/minglei/anaconda3/envs/PythonData/lib/python3.6/site-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n"
+     ]
+    }
+   ],
    "source": [
     "#Create the model\n",
     "model = Sequential()\n",
@@ -169,23 +213,22 @@
     "\n",
     "#Adding the output layer\n",
     "model.add(Dense(units=2, activation='softmax')) \n",
-    "\n",
     "#Compiling\n",
     "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy']) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x119664c50>"
+       "<tensorflow.python.keras.callbacks.History at 0xb2f0609b0>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +239,7 @@
     "model.fit(\n",
     "    inputs_df,\n",
     "    output,\n",
-    "    epochs=1000,\n",
+    "    epochs=100,\n",
     "    shuffle=False,\n",
     "    verbose=0\n",
     ")"
@@ -204,39 +247,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_6\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "dense_10 (Dense)             (None, 3)                 6         \n",
-      "_________________________________________________________________\n",
-      "dense_11 (Dense)             (None, 3)                 12        \n",
-      "_________________________________________________________________\n",
-      "dense_12 (Dense)             (None, 3)                 12        \n",
-      "_________________________________________________________________\n",
-      "dense_13 (Dense)             (None, 2)                 8         \n",
-      "=================================================================\n",
-      "Total params: 38\n",
-      "Trainable params: 38\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
+      "\r",
+      "4/4 [==============================] - 0s 4ms/sample\n"
      ]
     }
    ],
    "source": [
-    "model.summary()"
+    "# model.predict is what we use to see the neural net's output on real data\n",
+    "results = model.predict(inputs_df, verbose=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,16 +289,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0xb302c8c48>"
+       "<pymongo.results.InsertManyResult at 0xb2fce2688>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +321,7 @@
        " {'Date': '2000-01-04', 'Price': 0.4, 'Decision': 0}]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
