--- a/jupyter/Ming.ipynb
+++ b/jupyter/Ming.ipynb
@@ -283,8 +283,7 @@
     "client = pymongo.MongoClient(\"mongodb+srv://ming:ming123@ferengai-tiysn.mongodb.net/test?retryWrites=true&w=majority\")\n",
     "db = client.test\n",
     "col = db.test_collection\n",
-    "\n",
-    "col.drop()"
+    "\n"
    ]
   },
   {
@@ -304,6 +303,8 @@
     }
    ],
    "source": [
+    "\n",
+    "col.drop()\n",
     "col.insert_many(df.to_dict('records'))"
    ]
   },
