--- a/jupyter/df.ipynb
+++ b/jupyter/df.ipynb
@@ -2,7 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "import os\n",
+    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3' \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -95,66 +107,75 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1986-03-13</th>\n",
-       "      <td>0.062761</td>\n",
-       "      <td>0.097222</td>\n",
-       "      <td>0.101562</td>\n",
-       "      <td>0.088542</td>\n",
-       "      <td>0.088542</td>\n",
-       "      <td>1.031789e+09</td>\n",
+       "      <th>2019-09-23</th>\n",
+       "      <td>139.139999</td>\n",
+       "      <td>139.139999</td>\n",
+       "      <td>139.630005</td>\n",
+       "      <td>138.440002</td>\n",
+       "      <td>139.229996</td>\n",
+       "      <td>17139300.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1986-03-14</th>\n",
-       "      <td>0.065003</td>\n",
-       "      <td>0.100694</td>\n",
-       "      <td>0.102431</td>\n",
-       "      <td>0.097222</td>\n",
-       "      <td>0.097222</td>\n",
-       "      <td>3.081600e+08</td>\n",
+       "      <th>2019-09-24</th>\n",
+       "      <td>137.380005</td>\n",
+       "      <td>137.380005</td>\n",
+       "      <td>140.690002</td>\n",
+       "      <td>136.880005</td>\n",
+       "      <td>140.360001</td>\n",
+       "      <td>29773200.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1986-03-17</th>\n",
-       "      <td>0.066124</td>\n",
-       "      <td>0.102431</td>\n",
-       "      <td>0.103299</td>\n",
-       "      <td>0.100694</td>\n",
-       "      <td>0.100694</td>\n",
-       "      <td>1.331712e+08</td>\n",
+       "      <th>2019-09-25</th>\n",
+       "      <td>139.360001</td>\n",
+       "      <td>139.360001</td>\n",
+       "      <td>139.960007</td>\n",
+       "      <td>136.029999</td>\n",
+       "      <td>137.500000</td>\n",
+       "      <td>21382000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1986-03-18</th>\n",
-       "      <td>0.064443</td>\n",
-       "      <td>0.099826</td>\n",
-       "      <td>0.103299</td>\n",
-       "      <td>0.098958</td>\n",
-       "      <td>0.102431</td>\n",
-       "      <td>6.776640e+07</td>\n",
+       "      <th>2019-09-26</th>\n",
+       "      <td>139.539993</td>\n",
+       "      <td>139.539993</td>\n",
+       "      <td>140.179993</td>\n",
+       "      <td>138.440002</td>\n",
+       "      <td>139.440002</td>\n",
+       "      <td>17456600.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1986-03-19</th>\n",
-       "      <td>0.063322</td>\n",
-       "      <td>0.098090</td>\n",
-       "      <td>0.100694</td>\n",
-       "      <td>0.097222</td>\n",
-       "      <td>0.099826</td>\n",
-       "      <td>4.789440e+07</td>\n",
+       "      <th>2019-09-27</th>\n",
+       "      <td>137.729996</td>\n",
+       "      <td>137.729996</td>\n",
+       "      <td>140.360001</td>\n",
+       "      <td>136.649994</td>\n",
+       "      <td>140.149994</td>\n",
+       "      <td>22477700.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Attributes Adj Close     Close      High       Low      Open        Volume\n",
-       "Symbols         MSFT      MSFT      MSFT      MSFT      MSFT          MSFT\n",
-       "Date                                                                      \n",
-       "1986-03-13  0.062761  0.097222  0.101562  0.088542  0.088542  1.031789e+09\n",
-       "1986-03-14  0.065003  0.100694  0.102431  0.097222  0.097222  3.081600e+08\n",
-       "1986-03-17  0.066124  0.102431  0.103299  0.100694  0.100694  1.331712e+08\n",
-       "1986-03-18  0.064443  0.099826  0.103299  0.098958  0.102431  6.776640e+07\n",
-       "1986-03-19  0.063322  0.098090  0.100694  0.097222  0.099826  4.789440e+07"
+       "Attributes   Adj Close       Close        High         Low        Open  \\\n",
+       "Symbols           MSFT        MSFT        MSFT        MSFT        MSFT   \n",
+       "Date                                                                     \n",
+       "2019-09-23  139.139999  139.139999  139.630005  138.440002  139.229996   \n",
+       "2019-09-24  137.380005  137.380005  140.690002  136.880005  140.360001   \n",
+       "2019-09-25  139.360001  139.360001  139.960007  136.029999  137.500000   \n",
+       "2019-09-26  139.539993  139.539993  140.179993  138.440002  139.440002   \n",
+       "2019-09-27  137.729996  137.729996  140.360001  136.649994  140.149994   \n",
+       "\n",
+       "Attributes      Volume  \n",
+       "Symbols           MSFT  \n",
+       "Date                    \n",
+       "2019-09-23  17139300.0  \n",
+       "2019-09-24  29773200.0  \n",
+       "2019-09-25  21382000.0  \n",
+       "2019-09-26  17456600.0  \n",
+       "2019-09-27  22477700.0  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,24 +183,24 @@
    "source": [
     "stocks = [\"MSFT\"]\n",
     "start = datetime.datetime(1980,1,31)\n",
-    "end = datetime.datetime(2010,12,31)\n",
+    "end = datetime.datetime(2019,12,31)\n",
     "\n",
     "msft = data.DataReader(stocks, 'yahoo', start, end)\n",
-    "msft.head()"
+    "msft.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "msft.to_csv('msft_data.csv')"
+    "msft.to_csv('../resources/msft_data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +315,7 @@
        "1997-05-21  1.427083  1.427083  1.645833  1.375000  1.635417  18853200.0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +323,7 @@
    "source": [
     "stocks = [\"AMZN\"]\n",
     "start = datetime.datetime(1980,1,31)\n",
-    "end = datetime.datetime(2010,12,31)\n",
+    "end = datetime.datetime(2019,12,31)\n",
     "\n",
     "amzn= data.DataReader(stocks, 'yahoo', start, end)\n",
     "amzn.head()"
@@ -310,16 +331,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "amzn.to_csv('amzn_data.csv')"
+    "amzn.to_csv('../resources/amzn_data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +455,7 @@
        "1986-08-19  0.156006  0.214844  0.218750  0.214844  0.0   2060800.0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +463,7 @@
    "source": [
     "stocks = [\"ADBE\"]\n",
     "start = datetime.datetime(1980,1,31)\n",
-    "end = datetime.datetime(2010,12,31)\n",
+    "end = datetime.datetime(2019,12,31)\n",
     "\n",
     "adbe = data.DataReader(stocks, 'yahoo', start, end)\n",
     "adbe.head()"
@@ -450,11 +471,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "adbe.to_csv('adbe_data.csv')"
+    "adbe.to_csv('../resources/adbe_data.csv')"
    ]
   },
   {
@@ -481,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
