Cleaned up trainer JN

--- a/jupyter/DataTrainer.ipynb
+++ b/jupyter/DataTrainer.ipynb
@@ -38,15 +38,8 @@
     "client = pymongo.MongoClient(\"mongodb+srv://ming:ming123@ferengai-tiysn.mongodb.net/test?retryWrites=true&w=majority\")\n",
     "db = client[company]\n",
     "col = db.cleaned\n",
-    "stock_data = col.find()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "stock_data = col.find()\n",
+    "\n",
     "# Put company data into a dataframe\n",
     "import pandas as pd\n",
     "df = pd.DataFrame(list(stock_data))\n",
@@ -69,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -113,68 +106,31 @@
        "      <td>0.088542</td>\n",
        "      <td>1.031789e+09</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1986-03-14</td>\n",
-       "      <td>0.065003</td>\n",
-       "      <td>0.100694</td>\n",
-       "      <td>0.102431</td>\n",
-       "      <td>0.097222</td>\n",
-       "      <td>0.097222</td>\n",
-       "      <td>3.081600e+08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1986-03-17</td>\n",
-       "      <td>0.066124</td>\n",
-       "      <td>0.102431</td>\n",
-       "      <td>0.103299</td>\n",
-       "      <td>0.100694</td>\n",
-       "      <td>0.100694</td>\n",
-       "      <td>1.331712e+08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1986-03-18</td>\n",
-       "      <td>0.064443</td>\n",
-       "      <td>0.099826</td>\n",
-       "      <td>0.103299</td>\n",
-       "      <td>0.098958</td>\n",
-       "      <td>0.102431</td>\n",
-       "      <td>6.776640e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1986-03-19</td>\n",
-       "      <td>0.063322</td>\n",
-       "      <td>0.098090</td>\n",
-       "      <td>0.100694</td>\n",
-       "      <td>0.097222</td>\n",
-       "      <td>0.099826</td>\n",
-       "      <td>4.789440e+07</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "        Date  Adj Close     Close      High       Low      Open        Volume\n",
-       "0 1986-03-13   0.062761  0.097222  0.101562  0.088542  0.088542  1.031789e+09\n",
-       "1 1986-03-14   0.065003  0.100694  0.102431  0.097222  0.097222  3.081600e+08\n",
-       "2 1986-03-17   0.066124  0.102431  0.103299  0.100694  0.100694  1.331712e+08\n",
-       "3 1986-03-18   0.064443  0.099826  0.103299  0.098958  0.102431  6.776640e+07\n",
-       "4 1986-03-19   0.063322  0.098090  0.100694  0.097222  0.099826  4.789440e+07"
+       "0 1986-03-13   0.062761  0.097222  0.101562  0.088542  0.088542  1.031789e+09"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# We have our new organized dataframe!\n",
-    "df_new.head(5)"
+    "df_new.head(1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
