--- a/jupyter/DataTrainer.ipynb
+++ b/jupyter/DataTrainer.ipynb
@@ -24,7 +24,10 @@
     "company = \"MSFT\"\n",
     "\n",
     "# How many days in the future should we look? Aka how many more columns should be added? \n",
-    "days = 7"
+    "days = 30\n",
+    "\n",
+    "# How often should a robot wait to trade?\n",
+    "trade_day_cooldown = 1\n"
    ]
   },
   {
