--- a/jupyter/NeuralNet.ipynb
+++ b/jupyter/NeuralNet.ipynb
@@ -304,7 +304,7 @@
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0xb2dc7e5f8>"
+       "<tensorflow.python.keras.callbacks.History at 0xb2c75e358>"
       ]
      },
      "execution_count": 10,
@@ -326,26 +326,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r",
-      "4/4 [==============================] - 0s 8ms/sample\n"
+      "4/4 - 0s\n"
      ]
     }
    ],
    "source": [
     "# model.predict is what we use to see the neural net's output on real data\n",
-    "results = model.predict(inputs_df, verbose=1)"
+    "results = model.predict(inputs_df, verbose=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,16 +369,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ObjectId('5d8f8e3b0713caed6d373058')"
+       "ObjectId('5d92a26fddd298bf421b64d9')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
