--- a/jupyter/DataTrainer.ipynb
+++ b/jupyter/DataTrainer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,13 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get the company data from MongoDB\n",
     "import pymongo\n",
-    "client = pymongo.MongoClient(\"mongodb+srv://ming:ming123@ferengai-tiysn.mongodb.net/test?retryWrites=true&w=majority\")\n",
+    "client = pymongo.MongoClient(\"mongodb+srv://karla:karla123@ferengai-tiysn.mongodb.net/test?retryWrites=true&w=majority\")\n",
     "db = client[company]\n",
     "col = db.cleaned\n",
     "stock_data = col.find()\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "0 1986-03-13   0.062761  0.097222  0.101562  0.088542  0.088542  1.031789e+09"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
