--- a/jupyter/DataScaler.ipynb
+++ b/jupyter/DataScaler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,13 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Config Variables\n",
     "# We'll do one at a time for now instead of just looping through mongoDB for all of them.\n",
-    "company = \"GOOG\"\n",
+    "company = \"MSFT\"\n",
     "\n",
     "# What is the size of the rolling window that decides what 0 and 1 represents? \n",
     "days = 30"
@@ -29,28 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get data from mongoDB\n",
     "import ezmongo\n",
-    "df = ezmongo.get_data(company,\"train\")"
+    "df = ezmongo.get_data(company,\"cleaned_trained\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_column_order = ['Date', 'Adj Close', 'Close', 'High', 'Low', 'Open','Volume', 'BuyOrSell']\n",
-    "df=df.reindex(columns=new_column_order)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +82,7 @@
        "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +90,7 @@
    "source": [
     "#Save to mongoDB\n",
     "\n",
-    "ezmongo.set_data(rolled, 'GOOG', 'final')"
+    "ezmongo.set_data(rolled, 'MSFT', 'cleaned_trained_scaled')"
    ]
   },
   {
