--- a/jupyter/NNforMSFT.ipynb
+++ b/jupyter/NNforMSFT.ipynb
@@ -18,19 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get data from mongoDB\n",
     "import pymongo\n",
     "import ezmongo\n",
-    "df = ezmongo.get_data(\"GOOG\",\"scaled\")"
+    "df = ezmongo.get_data(\"MSFT\",\"cleaned_trained_scaled\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,19 +43,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# number_of_columns = len(input_df.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.utils import to_categorical\n",
     "\n",
@@ -63,33 +61,8 @@
     "# Even though the last columns is already 1 or 0, to_categorical needs to somehow convert this into \n",
     "# an array that looks like [x1,x2] and literally separate them into different states\n",
     "# Try printing out output and outputs_df to see the difference.\n",
-    "output_hot_shot_encoded = to_categorical(output_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_hot_shot_encoded"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "output_hot_shot_encoded = to_categorical(output_df)\n",
+    "\n",
     "#Creating the NN. Import the stuff\n",
     "\n",
     "from tensorflow.keras.models import Sequential\n",
@@ -98,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,10 +83,10 @@
     "#Setting general NN info here\n",
     "\n",
     "number_of_inputs = len(input_df.columns)\n",
-    "#We should have at least 1 extra layer. Just a design choice.\n",
-    "number_of_layers = number_of_inputs + 1\n",
-    "#Currently, the plan is to have an N by N grid system based on the number of inputs. \n",
-    "number_of_neurons_per_layer = number_of_layers + 1\n",
+    "\n",
+    "number_of_layers = number_of_inputs + 10\n",
+    "\n",
+    "number_of_neurons_per_layer = number_of_layers + 10\n",
     "\n",
     "\n",
     "#Adding the first input layer\n",
@@ -132,26 +105,92 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# One last look at what we're training the AI with\n",
-    "input_df.head(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/1000\n",
+      "8398/8398 - 2s - loss: 0.6910 - acc: 0.5376\n",
+      "Epoch 2/1000\n",
+      "8398/8398 - 1s - loss: 0.6908 - acc: 0.5381\n",
+      "Epoch 3/1000\n",
+      "8398/8398 - 2s - loss: 0.6899 - acc: 0.5381\n",
+      "Epoch 4/1000\n",
+      "8398/8398 - 1s - loss: 0.6902 - acc: 0.5381\n",
+      "Epoch 5/1000\n",
+      "8398/8398 - 2s - loss: 0.6906 - acc: 0.5381\n",
+      "Epoch 6/1000\n",
+      "8398/8398 - 2s - loss: 0.6905 - acc: 0.5381\n",
+      "Epoch 7/1000\n",
+      "8398/8398 - 2s - loss: 0.6906 - acc: 0.5381\n",
+      "Epoch 8/1000\n",
+      "8398/8398 - 2s - loss: 0.6905 - acc: 0.5381\n",
+      "Epoch 9/1000\n",
+      "8398/8398 - 2s - loss: 0.6904 - acc: 0.5381\n",
+      "Epoch 10/1000\n",
+      "8398/8398 - 2s - loss: 0.6903 - acc: 0.5381\n",
+      "Epoch 11/1000\n",
+      "8398/8398 - 1s - loss: 0.6905 - acc: 0.5381\n",
+      "Epoch 12/1000\n",
+      "8398/8398 - 1s - loss: 0.6904 - acc: 0.5381\n",
+      "Epoch 13/1000\n",
+      "8398/8398 - 1s - loss: 0.6904 - acc: 0.5381\n",
+      "Epoch 14/1000\n",
+      "8398/8398 - 1s - loss: 0.6904 - acc: 0.5381\n",
+      "Epoch 15/1000\n",
+      "8398/8398 - 1s - loss: 0.6904 - acc: 0.5381\n",
+      "Epoch 16/1000\n",
+      "8398/8398 - 2s - loss: 0.6905 - acc: 0.5381\n",
+      "Epoch 17/1000\n",
+      "8398/8398 - 1s - loss: 0.6904 - acc: 0.5381\n",
+      "Epoch 18/1000\n",
+      "8398/8398 - 1s - loss: 0.6904 - acc: 0.5381\n",
+      "Epoch 19/1000\n",
+      "8398/8398 - 2s - loss: 0.6904 - acc: 0.5381\n",
+      "Epoch 20/1000\n",
+      "8398/8398 - 1s - loss: 0.6904 - acc: 0.5381\n",
+      "Epoch 21/1000\n",
+      "8398/8398 - 1s - loss: 0.6902 - acc: 0.5381\n",
+      "Epoch 22/1000\n",
+      "8398/8398 - 2s - loss: 0.6904 - acc: 0.5381\n",
+      "Epoch 23/1000\n",
+      "8398/8398 - 2s - loss: 0.6903 - acc: 0.5381\n",
+      "Epoch 24/1000\n",
+      "8398/8398 - 2s - loss: 0.6903 - acc: 0.5381\n",
+      "Epoch 25/1000\n",
+      "8398/8398 - 2s - loss: 0.6905 - acc: 0.5381\n",
+      "Epoch 26/1000\n",
+      "8398/8398 - 2s - loss: 0.6904 - acc: 0.5381\n",
+      "Epoch 27/1000\n",
+      "8398/8398 - 2s - loss: 0.6903 - acc: 0.5381\n",
+      "Epoch 28/1000\n",
+      "8398/8398 - 2s - loss: 0.6904 - acc: 0.5381\n",
+      "Epoch 29/1000\n",
+      "8398/8398 - 2s - loss: 0.6904 - acc: 0.5381\n",
+      "Epoch 30/1000\n",
+      "8398/8398 - 2s - loss: 0.6904 - acc: 0.5381\n",
+      "Epoch 31/1000\n",
+      "8398/8398 - 2s - loss: 0.6904 - acc: 0.5381\n",
+      "Epoch 32/1000\n",
+      "8398/8398 - 1s - loss: 0.6903 - acc: 0.5381\n",
+      "Epoch 33/1000\n",
+      "8398/8398 - 1s - loss: 0.6904 - acc: 0.5381\n",
+      "Epoch 34/1000\n",
+      "8398/8398 - 1s - loss: 0.6904 - acc: 0.5381\n",
+      "Epoch 35/1000\n"
+     ]
+    }
+   ],
    "source": [
     "#Training the neurons\n",
     "\n",
     "model.fit(\n",
     "    input_df,\n",
     "    output_hot_shot_encoded,\n",
-    "    epochs=100,\n",
-    "    shuffle=False,\n",
-    "    verbose=0\n",
+    "    epochs=1000,\n",
+    "    shuffle=True,\n",
+    "    verbose=2\n",
     ")"
    ]
   },
